[package]
name = "kff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
once_cell = "1.21.3"
fs_extra = "1.3.0"
flate2 = "1.1.1"
tar = "0.4.44"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17.11"
